--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,13 @@
-title: Minimal theme
+title: <p align="center"> Seeta Ram Pandey </p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+description: 
+<p align="center">
+    
+  <br>   
+  Master’s in Electrical and Computer Engineering
+  15 years of progressive advancement in the telecommunication industry
+  
+  <br>
+  </p>
+
 theme: jekyll-theme-minimal
