--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: <p align="center"> Seeta Ram Pandey </p>
-logo: /assets/img/folder
+logo: /assets/img/logo.png
+
 description: 
 <p align="center">
     
